networking/main.tf
#-----------networking/main.tf--------------------

data "aws_availability_zones" "available" {}
resource "random_integer" "random" {
  min = 1
  max = 100
}


resource "random_shuffle" "az_list" {
  input        = data.aws_availability_zones.available.names
  result_count = var.max_subnets
}


resource "aws_vpc" "fade_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "fade_vpc-${random_integer.random.id}"
  }
  lifecycle {
    create_before_destroy = true ##very vital
  }
}

resource "aws_subnet" "fade_public_subnet" {
  count                   = var.public_sn_count
  vpc_id                  = aws_vpc.fade_vpc.id
  cidr_block              = var.public_cidrs[count.index]
  map_public_ip_on_launch = true
  availability_zone       = random_shuffle.az_list.result[count.index]

  tags = {
    Name = "fade_public_${count.index + 1}"
  }
}


resource "aws_route_table_association" "fade_public_assoc" {
  count          = var.public_sn_count
  subnet_id      = aws_subnet.fade_public_subnet.*.id[count.index]
  route_table_id = aws_route_table.fade_public_rt.id
}

resource "aws_subnet" "fade_private_subnet" {
  count                   = var.private_sn_count
  vpc_id                  = aws_vpc.fade_vpc.id
  cidr_block              = var.private_cidrs[count.index]
  map_public_ip_on_launch = false
  availability_zone       = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name = "fade_private_${count.index + 1}"
  }
}


resource "aws_internet_gateway" "fade_internet_gateway" {
  vpc_id = aws_vpc.fade_vpc.id

  tags = {
    Name = "fade_igw"
  }
}



resource "aws_route_table" "fade_public_rt" {
  vpc_id = aws_vpc.fade_vpc.id

  tags = {
    Name = "fade_public"
  }
}


resource "aws_route" "default_route" {
  route_table_id         = aws_route_table.fade_public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.fade_internet_gateway.id
}


resource "aws_default_route_table" "fade_privatte_rt" {
  default_route_table_id = aws_vpc.fade_vpc.default_route_table_id

  tags = {
    Name = "fade_private"
  }
} #default route table created by the VPC, you can always create a new route table for the private subnets


resource "aws_security_group" "fade_sg" {
  name        = "public_sg"
  description = "Security Group for Public Access"
  vpc_id      = aws_vpc.fade_vpc.id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.access_ip]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
